# bakabot-gui

./: .gitignore  README.md
tools/: install.bat  start_bot.bat  uninstall.bat
tools/restore/: Cargo.toml
tools/restore/src/: main.rs
window/: components.d.ts  index.html  package.json  pnpm-lock.yaml  vite.config.ts
window/src/: App.vue  main.ts  styles.css  vue-web-terminal.d.ts
window/src-tauri/: Cargo.toml  tauri.conf.json
window/src-tauri/src/: main.rs
window/src/components/: AppHeader.vue  MessageTimer.vue
window/src/components/footer/: AppFooter.vue
window/src/components/head/: AppHeader.vue
window/src/components/main/: AppMain.vue
window/src/components/side/: AppSide.vue  MessageTimer.vue
window/src/script/: drawer.ts  env.ts  store.ts  terminal.ts
